texlive-bin (2022.20220321.62855-2) UNRELEASED; urgency=medium

  * Lintian:
    - Remove obsolete: source-is-missing
    - Add (in general): very-long-line-length-in-source-file
    - Fix spelling errors in manual pages.

 -- Hilmar Preusse <hille42@web.de>  Mon, 16 May 2022 23:01:53 +0200

texlive-bin (2022.20220321.62855-1) experimental; urgency=medium

  * New upstream TeX Live 2022, upload to experimental.

  * Replace Dep: perl by "perl:any" (Closes: #968906).
  * Much lintian stuff, have a look at "git log" for details.

 -- Hilmar Preusse <hille42@web.de>  Mon, 02 May 2022 12:19:19 +0200

texlive-bin (2021.20210626.59705-1) unstable; urgency=medium

  [ Debian Janitor ]
  * Remove constraints unnecessary since stretch:
    + Build-Depends: Drop versioned constraint on autoconf, libtool and m4.
    + texlive-binaries: Drop versioned constraint on dpkg and tex-common in
      Depends.
    + texlive-binaries: Drop versioned constraint on m-tx, musixtex, pmx, tex4ht
      and texlive-base in Replaces.
    + texlive-binaries: Drop versioned constraint on context, m-tx, musixtex,
      pmx, tex-common and tex4ht in Breaks.
    + libkpathsea6: Drop versioned constraint on texlive-base in Breaks.
    + libptexenc1: Drop versioned constraint on texlive-base in Breaks.

  [ Norbert Preining ]
  * New upstream TeX Live 2021
  * Update lintian override

 -- Norbert Preining <norbert@preining.info>  Sun, 15 Aug 2021 22:38:02 +0900

texlive-bin (2020.20200327.54578-7) unstable; urgency=medium

  * Backport several security fixes for shell escape exploits in
    xdvi, luatex, general write18 implementation.

 -- Norbert Preining <norbert@preining.info>  Sat, 13 Mar 2021 09:31:55 +0900

texlive-bin (2020.20200327.54578-6) unstable; urgency=medium

  * Reduce B-D (Closes: #979607)
    Thanks to Helmut Grohne for finding the minimal set.
  * Bump standards version to 4.5.1, no changes necessary.

 -- Norbert Preining <norbert@preining.info>  Sat, 16 Jan 2021 14:31:47 +0900
