@@ -4,6 +4,9 @@ texlive-bin (2022.20220321.62855-2) UNRELEASED; urgency=medium
     - Remove obsolete: source-is-missing
     - Add (in general): very-long-line-length-in-source-file
     - Fix spelling errors in manual pages.
+    - W: libtexlua53: package-name-doesnt-match-sonames libtexlua53-5
+      renamed: libtexlua53-dev -> libtexlua-dev.
+      renamed: libtexlua53 -> libtexlua53-5
 
  -- Hilmar Preusse <hille42@web.de>  Mon, 16 May 2022 23:01:53 +0200
 
